--- a/235 Home/styles/stylesheet.css
+++ b/235 Home/styles/stylesheet.css
@@ -1,25 +1,35 @@
 body {
     margin: 0 auto;
+    background-color: rgb(255, 254, 253);
 }
 
 header {
     display: flex;
-    background-color: lightblue;
+    background-color: rgb(137, 225, 255);
     justify-content: center;
     align-items: center;
-    height: 30em;
+    height: 18em;
 }
 
 h1 {
     margin: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 main {
-    padding: 0 10em;
+    font-family: sans-serif;
+    width: 70%;
+    margin: 0 auto;
 }
 
 h2 {
-    border-bottom: 2px solid black;
+    border-bottom: 1px solid rgb(121, 78, 53);
+    text-align: left;
+    color: rgb(121, 78, 53);
+}
+
+p {
+    color: rgb(48, 30, 21);
 }
 
 #bio {
@@ -28,20 +38,55 @@ h2 {
     align-items: center;
 }
 
+#bio h2 {
+    align-self: flex-start;
+    width: 100%;
+}
+
 #pic {
     width: 300px;
     height: 300px;
     object-fit: none;
     object-position: 36% 30%;
     border-radius: 50%;
-    margin-right: 2em;
-}
-footer {
-    background-color: lightblue;
-    margin-top: 1em;
-    padding-top: 20px;
 }
 
-footer img {
+.links {
+    text-decoration: none;
+    display: block;
+    width: fit-content;
+    margin: 1em 0;
+}
+
+.links:link {
+    color: rgb(121, 78, 53);
+}
+
+.links:visited {
+    color: black;
+}
+
+.links:focus {
+    text-decoration: underline;
+}
+
+.links:hover {
+    text-decoration: underline;
+}
+
+.links:active {
+    color: rgb(137, 225, 255);
+}
+
+footer {
+    background-color: rgb(137, 225, 255);
+    margin-top: 1em;
+    height: 3em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon {
     width: 100px;
 }
