--- a/design-to-spec/styles/stylesheet.css
+++ b/design-to-spec/styles/stylesheet.css
@@ -83,8 +83,11 @@ header {
     height: 50px;
     align-items: center;
 }
-#header-content object {
-    width: 50px;
+#header-content h1 {
+    width: auto;
+}
+#header-content #icon {
+    filter: invert(100%) hue-rotate(122deg) brightness(106%) contrast(102%);
 }
 #header-content p {
     margin-left: auto;
@@ -101,6 +104,7 @@ main {
     grid-area: large;
     margin: 2rem -.5rem;
     justify-content: center;
+    flex-flow: row wrap;
 }
 #large .text-box {
     width: 510px;
@@ -130,14 +134,14 @@ main {
 #widescreen {
     grid-area: widescreen;
     width: 100%;
-    height: 510px;
+    height: 40vw;
     background-image: url(../images/valley.jpg);
     background-size: cover;
     background-position: 50% 50%;
 }
 #small {
     grid-area: small;
-    grid-template-columns: repeat(4, 245px);
+    grid-template-columns: repeat(2, 245px);
     grid-gap: .8rem 1.2rem;
     justify-content: center;
     margin: 2rem 0;
@@ -197,8 +201,15 @@ footer {
     grid-area: content;
     align-items: center;
 }
+#footer-content h3 {
+    font-size: 1.4rem;
+}
 #footer-content #right {
     margin-left: auto;
+    text-align: right;
 }
-
-
+@media (min-width: 1050px) {
+    #small {
+        grid-template-columns: repeat(4, 245px);
+    }
+}
