--- a/project1/css/stylesheet.css
+++ b/project1/css/stylesheet.css
@@ -1,3 +1,6 @@
+/* External CSS file for portfolio and documentation */
+
+/* Navigation Bar */
 .navbar {
     position: fixed;
     width: 100%;
@@ -5,73 +8,105 @@
     z-index: 16;
     background-color: rgb(0, 162, 255);
 }
-.navbar a {
+#home a {
     font-size: 1.3rem;
+    font-weight: 600;
+}
+.navbar a {
+    font-size: 1.1rem;
 }
 .mr-auto {
     margin-left: auto;
     margin-right: 0!important;
 }
+/* Nav link states */
 .nav-link {
     color: black !important;
+    transition: color .5s, font-size .5s ease-in;
 }
+.nav-link:hover {
+    color: white !important;
+    font-size: 1.4rem;
+}
+.nav-link:active {
+    color: white !important;
+    font-size: 1.4rem;
+}
+
 header {
-    height: 85vh;
+    padding-bottom: 7rem;
 }
+
+/* Adjust the landing of nav links to the proper place */
 html {
-    scroll-padding-top: 56px;
+    scroll-behavior: smooth;
 }
+#projects {
+    padding-top: 58px;
+    margin-top: -58px;
+}
+#resume {
+    padding-top: 58px;
+    margin: -23px auto 0;
+}
+#contact {
+    padding-top: 58px;
+}
+/* Basic colors and fonts */
 body {
     padding-top: 3rem;
     background-color: rgb(32, 32, 32);
 }
 main {
     background-color: rgb(63, 63, 63);
-    padding-bottom: .5rem;
+    padding: .5rem 0;
+}
+.grid, .carousel, main, footer {
+    font-family: 'Rubik', sans-serif;
 }
 h1, h2, h3, p {
     color: white;
 }
+/* About Me Section */
 .grid {
     display: grid;
     width: 80%;
+}
+#about {
     margin: 2rem auto;
     grid-template-areas: 
         "name"
         "tag-line"
         "profile"
         "about";
-    /*column-gap: 1.5rem;
-    grid-template-columns: .3fr 1fr;
-    grid-template-areas: 
-        "profile name"
-        "profile tag-line"
-        "profile about";*/
 }
-.grid img {
+#about img {
     grid-area: profile;
     width: 100%;
     border-radius: 1.5rem;
     margin-top: 1rem;
 }
-.grid h1 {
+#about h1 {
     grid-area: name;
     margin: 0;
-    font-size: 2.3rem;
+    font-size: 1.7rem;
     align-self: end;
 }
-.grid h2 {
+#about h2 {
     grid-area: tag-line;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     margin: 0;
     align-self: start;
-    color: rgb(255, 123, 0);
+    background: -webkit-linear-gradient(0deg, rgb(255,170,0), rgb(255,67,0));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
-.grid p {
+#about p {
     grid-area: about;
     font-size: 1rem;
     margin: 1.5rem auto 0;
 }
+/* Gallery Carousel */
 #carouselExampleCaptions {
     width: 100%;
     margin: 3rem auto;
@@ -79,65 +114,351 @@ h1, h2, h3, p {
 .carousel-inner {
     border-radius: .5rem;
 }
-.d-block {
-    /*height: 20vh;*/
+.carousel-control-prev, .carousel-control-next, .carousel-caption {
+    display: none !important;
 }
+#carouselExampleCaptions:hover > .carousel-control-prev, #carouselExampleCaptions:hover > .carousel-control-next {
+    display: flex !important;
+}
+#carouselExampleCaptions:hover .carousel-caption {
+    display: block !important;
+}
+#carouselExampleCaptions:hover .d-block {
+    filter: brightness(70%);
+}
+/* Projects Section */
 .flex {
     display: flex;
     flex-flow: column nowrap;
-    margin: 7rem auto;
+    margin: 1.5rem auto;
     align-items: center;
     width: 70%;
 }
-.flex img {
+#projects img {
     width: 100%;
 }
-.flex h2 {
+#projects h2 {
     color:  rgb(0, 162, 255);
-    font-size: 2rem;
+    font-size: 1.7rem;
 }
-.flex h2, .flex p {
+#projects h2, #projects p {
     margin: 2rem auto;
 }
-#resume {
+#projects p {
+    font-size: 1rem;
+}
+#first-project {
+    margin-top: 1rem;
+}
+.line-gradient {
     width: 90%;
-    margin: 2rem auto;
+    height: 3px;
+    border-radius: .2rem;
+    margin: 0 auto;
+    background: linear-gradient(135deg, rgb(255,170,0), rgb(255,67,0));
+}
+/* Resume Section */
+#resume-content {
+    width: 90%;
+    margin: 2rem auto 2rem;
     text-align: center;
 }
-#resume h2 {
-    color:  rgb(0, 162, 255);
-    font-size: 2rem;
+#resume-content iframe {
+    width: 100%;
+    height: 500px;
+    margin: 1rem auto;
 }
+#resume-content h2 {
+    color:  rgb(0, 162, 255);
+    font-size: 1.7rem;
+}
+/* Contact Me Section */
 #contact {
-    margin: 2rem auto;
+    margin: -23px auto 2rem;
     text-align: center;
 }
 #contact h2 {
     color:  rgb(0, 162, 255);
+    font-size: 1.7rem;
 }
-a {
+#contact-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
+    margin: 2rem auto;
+    justify-content: center;
+}
+#form {
+    color: white;
+    width: 80%;
+    text-align: left;
+    margin: 2rem auto;
+}
+input[type="text"] {
+    width: 100%;
+    border-radius: .5rem;
+    border: none;
+    border-bottom: 2px solid rgb(118, 118, 118);
+    background-color: rgb(63, 63, 63);
+    outline: none;
+    color: white;
+    padding: .4rem .8rem;
+    margin-bottom: 1.2rem;
+}
+input[type=text]:focus {
+    border-bottom: 2px solid rgb(255, 123, 0);
+}
+textarea {
+    width: 100%;
+    border-radius: .5rem;
+    border: none;
+    border-bottom: 2px solid rgb(118, 118, 118);
+    background-color: rgb(63, 63, 63);
+    outline: none;
+    color: white;
+    padding: .4rem .8rem;
+    margin-bottom: 1.2rem;
+}
+textarea:focus {
+    border-bottom: 2px solid rgb(255, 123, 0);
+}
+#message {
+    height: 25vh;
+    resize: none;
+}
+label {
+    margin-bottom: .2rem;
+}
+/* Class button states */
+.button {
+    color: black;
+    text-decoration: none;
+    border: none;
+    background: linear-gradient(135deg, rgb(255,170,0), rgb(255,67,0));
+    border-radius: .2rem;
+    padding: .4rem;
+    z-index: 1;
+    position: relative;
+    display: inline-block;
+    transition: font-size .3s;
+}
+.button::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgb(0,203,255), rgb(0,117,255));
+    border-radius: .2rem;
+    opacity: 0;
+    transition: opacity .5s, font-size .3s;
+    z-index: -1;
+}
+.button:focus::before {
+    opacity: 1;
+    font-size: 1.1rem;
+}
+.button:hover::before {
+    opacity: 1;
+    font-size: 1.1rem;
+}
+.button:active::before {
+    opacity: 1;
+    font-size: 1.1rem;
+}
+.button:focus {
+    color: black;
+    text-decoration: none;
+    font-size: 1.1rem;
+    outline: none;
+}
+.button:hover {
+    color: black;
+    text-decoration: none;
+    font-size: 1.1rem;
+}
+.button:active {
+    color: black;
+    text-decoration: none;
+    font-size: 1.1rem;
+    outline: none;
+}
+/* Class icon states */
+#contact-info .icon {
+    text-decoration: none;
+    font-size: 2.5rem;
     color: rgb(255, 123, 0);
 }
-a:focus {
-    color:  rgb(0, 162, 255);
+#contact-info .icon:focus {
+    color: rgb(0, 162, 255);
 }
-a:hover {
-    color:  rgb(0, 162, 255);
+#contact-info .icon:hover {
+    color: rgb(0, 162, 255);
 }
-a:active {
-    color:  rgb(0, 162, 255);
+#contact-info .icon:active {
+    color: rgb(0, 162, 255);
+}
+/* Unsuccessful attempt at making gradient icons work on IOS safari */
+/*@supports (-webkit-text-fill-color: transparent)
+    {
+        #contact-info .icon {
+            background: -webkit-linear-gradient(315deg, rgb(255,170,0), rgb(255,67,0));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: rgba(255,255,255,0);
+        }
+        #contact-info .icon:focus {
+            background: -webkit-linear-gradient(315deg, rgb(0,203,255), rgb(0,117,255));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: rgba(255,255,255,0);
+        }
+        #contact-info .icon:hover {
+            background: -webkit-linear-gradient(315deg, rgb(0,203,255), rgb(0,117,255));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: rgba(255,255,255,0);
+        }
+        #contact-info .icon:active {
+            background: -webkit-linear-gradient(315deg, rgb(0,203,255), rgb(0,117,255));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: rgba(255,255,255,0);
+        }
+    }*/
+
+/* Documentation Specific Styles */
+.documentation {
+    align-items: flex-start;
+}
+.documentation ul {
+    color: white;
+    margin: 0;
+}
+.documentation img {
+    margin: 0 auto;
+    width: 50% !important;
+}
+.documentation p {
+    margin: 2.5rem 0 1rem !important;
+}
+.documentation .sources {
+    margin: .3rem 0 !important;
+}
+.documentation .notes {
+    margin-bottom: .7rem;
+}
+.documentation #back_button {
+    margin: 1.5rem auto;
 }
 /* MEDIA QUERIES */
+@media (min-width: 410px)
+{
+    #about img {
+        width: 315px;
+        justify-self: center;
+    }
+    #about h1, #about h2, #about p {
+        justify-self: center;
+    }
+}
 @media (min-width: 570px)
 {
-    .grid img {
-        width: 442px;
-        justify-self: center;
-    }
-    .grid h1, .grid h2 {
-        justify-self: center;
-    }
     #carouselExampleCaptions {
         width: 80%;
+    }
+    #contact-wrapper {
+        flex-flow: row nowrap;
+    }
+    #form {
+        width: 40%;
+        margin: 0 0 0 6rem;
+    }
+}
+@media (min-width: 992px)
+{
+    .nav-link {
+        padding: 0 .5rem;
+    }
+    .nav-border {
+        border-right: 2.2px solid white;
+    }
+    #resume-content {
+        width: 70%;
+    }
+    #about {
+        width: 90%;
+        column-gap: 1.5rem;
+    grid-template-columns: .3fr 1fr;
+    grid-template-areas: 
+        "profile name"
+        "profile tag-line"
+        "profile about";
+    }
+    #about img {
+        width: 258px;
+        margin-top: 0;
+    }
+    #about h1, #about h2, #about p {
+        justify-self: left;
+    }
+    #about h1 {
+        font-size: 2.8vw;
+    }
+    #about h2 {
+        font-size: 1.6vw;
+    }
+    #about p {
+        font-size: 1.4vw;
+    }
+    #projects h2 {
+        font-size: 2rem;
+    }
+    #resume-content h2 {
+        font-size: 2rem;
+    }
+    #contact h2 {
+        font-size: 2rem;
+    }
+    #carouselExampleCaptions {
+        width: 65%;
+    }
+    .d-block {
+        height: 32vw;
+    }
+    .flex {
+        margin: 4rem auto;
+    }
+    #projects img {
+        width: 80%;
+    }
+    #contact-info {
+        margin-left: 12rem;
+    }
+}
+@media (min-width: 1280px)
+{
+    #carouselExampleCaptions {
+        width: 47%;
+    }
+    .d-block {
+        height: 25vw;
+    }
+    .grid img {
+        width: 100%;
+    }
+    #resume-content {
+        width: 50%;
+    }
+    #about {
+        width: 80%;
+    }
+    #about h1 {
+        font-size: 2.3rem;
+    }
+    #about h2 {
+        font-size: 1.4rem;
+    }
+    #about p {
+        font-size: 1.1rem;
+    }
+    #projects img {
+        width: 60%;
     }
 }
